--- a/app/src/main/res/layout/activity_bluetooth_connection.xml
+++ b/app/src/main/res/layout/activity_bluetooth_connection.xml
@@ -19,10 +19,10 @@
         android:textSize="18sp" />
 
     <ListView
+        android:id="@+id/PairedDevicesList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:translationY="50dp" />
-
 
 </RelativeLayout>
 
